--- a/package.json
+++ b/package.json
@@ -12,18 +12,28 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-vector-icons/ant-design": "^12.3.0",
+    "@react-native-vector-icons/material-design-icons": "^12.3.0",
+    "@react-native-vector-icons/entypo": "^12.3.0",
+    "@react-native-vector-icons/feather": "^12.3.0",
+    "@react-native-vector-icons/fontawesome": "^12.3.0",
+    "@react-native-vector-icons/ionicons": "^12.3.0",
+    "@react-native-vector-icons/material-icons": "^12.3.0",
     "@react-native/new-app-screen": "0.80.0",
     "@react-navigation/elements": "^2.6.5",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.28",
     "@reduxjs/toolkit": "^2.9.1",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "react": "19.1.0",
     "react-native": "0.80.0",
     "react-native-animatable": "^1.4.0",
     "react-native-confirmation-code-field": "^8.0.1",
     "react-native-element-dropdown": "^2.12.4",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.14.5",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.17.1",
