feat: Add components for ride sharing app including AvailableRideCard, DriverCard, RiderTab, RoutesCard, and Tab for navigation
- Implemented AvailableRideCard component to display ride details.
- Created DriverCard component to showcase driver information.
- Developed RiderTab component for displaying rider statistics.
- Added RoutesCard component for route information and saving details.
- Introduced Tab component for navigation between different sections.
- Established BottomNavigation for main app navigation.
- Designed screens for AvailableRides, Home, MessageListing, MyProfile, MyRides, and ViewMap.
- Integrated custom buttons and text inputs for user interaction.
- Enhanced UI with consistent styling and responsive design using moderateScale.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,6 +93,11 @@ android {
             keyPassword 'android'
         }
     }
+     externalNativeBuild {
+        cmake {
+            version "3.22.1"
+        }
+    }
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
