--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-element-dropdown": "^2.12.4",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.14.5",
     "react-native-phone-number-input": "^2.1.0",
